--- a/deepL.ipynb
+++ b/deepL.ipynb
@@ -6,6 +6,7 @@
       "name": "deepL.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +29,56 @@
       "metadata": {
         "id": "iOlM7hjHICiW",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "e1514ff4-5414-42b9-ff4c-a2e3fe4ae2cf"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "!git clone https://github.com/tensorflow/tensorflow.git"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'tensorflow'...\n",
+            "remote: Enumerating objects: 533735, done.\u001b[K\n",
+            "remote: Total 533735 (delta 0), reused 0 (delta 0), pack-reused 533735\u001b[K\n",
+            "Receiving objects: 100% (533735/533735), 309.43 MiB | 26.76 MiB/s, done.\n",
+            "Resolving deltas: 100% (429130/429130), done.\n",
+            "Checking out files: 100% (16321/16321), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "amQv5sRcI03E",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9343c0ff-e2ce-453d-d35a-9221f8d49791"
+      },
+      "cell_type": "code",
+      "source": [
+        "ls ."
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[01;34mdrive\u001b[0m/  \u001b[01;34msample_data\u001b[0m/  \u001b[01;34mtensorflow\u001b[0m/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
