--- a/deepL.ipynb
+++ b/deepL.ipynb
@@ -79,6 +79,578 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "Crox_PL3bExq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f8de2e96-66a9-4c23-fb1e-4afe4af383e0"
+      },
+      "cell_type": "code",
+      "source": [
+        "pwd"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "5FmWfHGrbnFe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os.chdir(\"/content/drive/My Drive/deeplearning\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "QjyiqLhYZH9e",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "pRuydCsOZmWC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#b=tf.Variable(2.0)\n",
+        "b=tf.placeholder(tf.float32)\n",
+        "c=tf.Variable(3.0)\n",
+        "const=tf.constant(2.0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "0Alr3E1NaBOH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "d=tf.add(b,c)\n",
+        "e=tf.add(c,const)\n",
+        "a=tf.multiply(d,e)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "E-Rf6OuAaQGS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "init=tf.global_variables_initializer()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "gML76Juxai6j",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f518c941-714f-4c29-8cda-0cc1ffe3b1c6"
+      },
+      "cell_type": "code",
+      "source": [
+        "with tf.Session() as sess:\n",
+        "  sess.run(init)\n",
+        "  a_out=sess.run(a,feed_dict={b:50})\n",
+        "  print(\"variable={}\".format(a_out))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "variable=265.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Or7KyMtdcuZu",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# tensorboard for graph"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "SWP7as1Lf5su",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "a=\"\"\n",
+        "b=\"\"\n",
+        "c=\"\"\n",
+        "d=\"\"\n",
+        "e=\"\"\n",
+        "x=\"\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "wOWGiFdXb6aM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1d2949cf-5af5-4c01-bb12-ba284cdb8f65"
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install tensorboardcolab"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: tensorboardcolab in /usr/local/lib/python3.6/dist-packages (0.0.22)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "GFpohESrcGjl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from tensorboardcolab import TensorBoardColab"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Pluo6k45cSFN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "76bece36-5e39-4a88-fc0a-3ed552a736eb"
+      },
+      "cell_type": "code",
+      "source": [
+        "tbc=TensorBoardColab()"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Wait for 8 seconds...\n",
+            "TensorBoard link:\n",
+            "https://99c4db77.ngrok.io\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "UuhsrX2Zc1HP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "a=tf.constant(2,name=\"a\")\n",
+        "b=tf.constant(2,name=\"b\")\n",
+        "x=tf.add(a,b)\n",
+        "summary_writer=tbc.get_writer()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "jorwccH9dOiE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cb278404-65af-47d0-f11a-ccff3218d1b8"
+      },
+      "cell_type": "code",
+      "source": [
+        "with tf.Session() as sess:\n",
+        "  x_out=sess.run(x)\n",
+        "  print(x_out)\n",
+        "  summary_writer.add_graph(sess.graph)"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YCZV8t3uZHm3",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# linear regression in tensorflow"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "595PU7RBiCU8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "import numpy\n",
+        "import matplotlib.pyplot as plt\n",
+        "rng = numpy.random"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "FXmEMvSkiRK7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "learning_rate=0.01\n",
+        "training_epochs=1000\n",
+        "display_step=50"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "L722L4D0iu1J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "train_X = numpy.asarray([3,3,4,5,3,6,89,32,24,56,22,5,54,6,12,56,38,56,32,71,60])\n",
+        "train_Y = numpy.asarray([2,5,7,1,67,56,87,9,34,67,18,35,98,34,36,35,79,23,57,1])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "qKM6TV4PjqGe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# graph input (it is placeholder as placeholder is given by user)\n",
+        "X=tf.placeholder(\"float\")\n",
+        "Y=tf.placeholder(\"float\")\n",
+        "\n",
+        "W=tf.Variable(rng.randn(),name=\"weight\")\n",
+        "b=tf.Variable(rng.randn(),name=\"bias\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "heLe9EvHj2Z_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "6705e8dc-63c3-4c00-8ba8-a6580b20a170"
+      },
+      "cell_type": "code",
+      "source": [
+        "pred=tf.add(tf.multiply(X,W),b)    #predict\n",
+        "\n",
+        "#mean of sum of squared error\n",
+        "cost=tf.reduce_sum(tf.pow(pred-Y,2))/2\n",
+        "\n",
+        "optimizer=tf.train.GradientDescentOptimizer(learning_rate).minimize(cost)\n",
+        "\n",
+        "init=tf.global_variables_initializer()"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.cast instead.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "KYPGDsuEkhYl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "sess=tf.Session()\n",
+        "sess.run(init)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "fvZZF3-jmO_M",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# check Copy of linear regression.ipynb"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "RdR7L50wtY4J",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# MNIST"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "V5JfvnKZtiUy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 524
+        },
+        "outputId": "0735e1fb-52b6-47dd-a234-45bdc1d44725"
+      },
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.examples.tutorials.mnist import input_data\n",
+        "mnist = input_data.read_data_sets(\"MNIST_data\",one_hot=True)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From <ipython-input-1-e27ac7d0566b>:2: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please write your own downloading logic.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:252: _internal_retry.<locals>.wrap.<locals>.wrapped_fn (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use urllib or similar directly.\n",
+            "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use tf.data to implement this functionality.\n",
+            "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+            "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use tf.data to implement this functionality.\n",
+            "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use tf.one_hot on tensors.\n",
+            "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+            "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+            "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+            "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "iH-J2hAVvAok",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "import numpy\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "CHk3HxrGuy4b",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "23a1f05f-f901-4a9e-f61c-64108f0a4e1a"
+      },
+      "cell_type": "code",
+      "source": [
+        "from tensorboardcolab import TensorBoardColab\n",
+        "tbc=TensorBoardColab()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Wait for 8 seconds...\n",
+            "TensorBoard link:\n",
+            "http://aedfb57a.ngrok.io\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "pkzbpn_8t6dj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 364
+        },
+        "outputId": "0acafff0-d108-4998-8d62-705c45f4af03"
+      },
+      "cell_type": "code",
+      "source": [
+        "images = mnist.test.images[0:9]\n",
+        "plt.imshow(images[0].reshape(28,28),cmap=\"gray\")\n",
+        "plt.axis(\"off\")\n",
+        "plt.figure(figsize=(8,12))\n",
+        "plt.show()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAUsAAAFKCAYAAACU6307AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvOIA7rQAABy5JREFUeJzt3b2rzv8Dx/Fz/TAoC6IMbspkkZuU\nQh1ZxOj8Cywnizqz3WjxF1iUMkhSFAMGBiGRY0BS6hhQJ9T1W7/f4Xt6npvruDmPx/zq87mmZ+/h\nevcZDIfD4RgAc/rfr/4BAH8CsQQIxBIgEEuAQCwBArEECFYvx0sGg8FyvAZgUeb6J6WTJUAglgCB\nWAIEYgkQiCVAIJYAgVgCBGIJEIglQCCWAIFYAgRiCRCIJUAglgCBWAIEYgkQiCVAIJYAgVgCBGIJ\nEIglQCCWAIFYAgRiCRCIJUAglgCBWAIEYgkQiCVAIJYAgVgCBGIJEIglQCCWAIFYAgRiCRCIJUAg\nlgCBWAIEYgkQiCVAIJYAgVgCBGIJEIglQCCWAIFYAgRiCRCIJUAglgCBWAIEYgkQiCVAIJYAgVgC\nBGIJEIglQCCWAIFYAgRiCRCIJUAglgCBWAIEYgkQiCVAIJYAgVgCBGIJEIglQCCWAIFYAgRiCRCI\nJUAglgDB6l/9A1aCiYmJvD19+nTaffjwIT9zdnY2by9fvpx2Hz9+zM98/fp13sLvyskSIBBLgEAs\nAQKxBAjEEiAQS4BALAECsQQIxBIgGAyHw+HIXzIYjPoVv7U3b97k7Y4dO0b3Q5bQly9f8vb58+cj\n/CUr1/v379PuwoUL+ZmPHj1a6M/5K8yVQydLgEAsAQKxBAjEEiAQS4BALAECsQQIxBIgEEuAQCwB\nAh8sWwb1I2RjY2Nju3fvTrsXL17kZ+7atStv9+3bl3bj4+P5mQcPHszbd+/epd3WrVvzM0fh58+f\nefvp06e83bJly0J+zpzevn2btyv9uuNcnCwBArEECMQSIBBLgEAsAQKxBAjEEiAQS4BALAECsQQI\nfN2RBVm/fn3e7tmzJ28fP36cdgcOHMjPHIXZ2dm8ffXqVd7O5xrrhg0b0m5ycjI/89KlS3n7N/J1\nR4BFEkuAQCwBArEECMQSIBBLgEAsAQKxBAjEEiBwgwdG7NSpU3l75cqVvH327FnaHT16ND9zZmYm\nb/9GbvAALJJYAgRiCRCIJUAglgCBWAIEYgkQiCVAIJYAgVgCBK47wgJs3rw5b58+fTqS505MTKTd\n1atX8zNXOtcdARZJLAECsQQIxBIgEEuAQCwBArEECMQSIBBLgEAsAYLVv/oHwJ9ocnIybzdt2pS3\nnz9/ztuXL1/mLYvnZAkQiCVAIJYAgVgCBGIJEIglQCCWAIFYAgRiCRD4YBn8w6FDh9Luzp07+Zlr\n1qzJ2/Hx8by9d+9e3tL4YBnAIoklQCCWAIFYAgRiCRCIJUAglgCBWAIEYgkQiCVA4INl8A8nTpxI\nu/lcYbx9+3bePnjwIG9ZXk6WAIFYAgRiCRCIJUAglgCBWAIEYgkQiCVAIJYAgVgCBK478tdbu3Zt\n3h4/fjztvn//np95/vz5vP3x40fesrycLAECsQQIxBIgEEuAQCwBArEECMQSIBBLgEAsAQKxBAhc\nd+SvNzU1lbd79+5Nu5s3b+Zn3r9/P2/5fTlZAgRiCRCIJUAglgCBWAIEYgkQiCVAIJYAgVgCBIPh\ncDgc+UsGg1G/ghXm5MmTeXvt2rW8/fbtW9rVD5uNjY2NPXz4MG/5tebKoZMlQCCWAIFYAgRiCRCI\nJUAglgCBWAIEYgkQiCVAIJYAgQ+W8VvZuHFj2l28eDE/c9WqVXl748aNtHOFceVxsgQIxBIgEEuA\nQCwBArEECMQSIBBLgEAsAQKxBAjEEiDwdUdGbj7XDes1wv379+dnTk9P5239auN8nsmfw9cdARZJ\nLAECsQQIxBIgEEuAQCwBArEECMQSIBBLgMAHyxi5nTt35u18buZU586dy1s3c/gvTpYAgVgCBGIJ\nEIglQCCWAIFYAgRiCRCIJUAglgCBWAIErjuyINu3b8/bW7duLfn7p6am8vb69etL/n5WHidLgEAs\nAQKxBAjEEiAQS4BALAECsQQIxBIgEEuAQCwBAtcdWZAzZ87k7bZt25b8/Xfv3s3b4XC45O9n5XGy\nBAjEEiAQS4BALAECsQQIxBIgEEuAQCwBArEECNzg4V8OHz6cdmfPnh3xL4Hfi5MlQCCWAIFYAgRi\nCRCIJUAglgCBWAIEYgkQiCVAIJYAgeuO/MuRI0fSbt26dSN5//T0dNp9/fp1JO+H/+JkCRCIJUAg\nlgCBWAIEYgkQiCVAIJYAgVgCBGIJEIglQOC6IyP35MmTvD127FjazczMLPTnwII4WQIEYgkQiCVA\nIJYAgVgCBGIJEIglQCCWAIFYAgSD4XA4HPlLBoNRvwJg0ebKoZMlQCCWAIFYAgRiCRCIJUAglgCB\nWAIEYgkQiCVAIJYAwbJ8sGwZblQCjJSTJUAglgCBWAIEYgkQiCVAIJYAgVgCBGIJEIglQCCWAIFY\nAgRiCRCIJUAglgCBWAIEYgkQiCVAIJYAgVgCBGIJEIglQCCWAIFYAgT/B2ow7tIM9BJ9AAAAAElF\nTkSuQmCC\n",
+            "text/plain": [
+              "<Figure size 576x396 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<Figure size 576x864 with 0 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "FuC7ggA4uRjS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
